﻿============================== next release ==============================
  
  new data (thanks to Junho Choi, University of Texas at Austin, USA, for submitting data in YAML format!)
    main/Ag/Choi.yml
    main/Al/Cheng.yml
  new data (thanks to Andres Castellanos-Gomez, Consejo Superior de Investigaciones Científicas, Madrid, Spain, for providing data!)
    other/crystalline minerals/franckeite/Gant.yml
    main/PbI2/Frisenda.yml
    main/MoS2/Hsu-1L.yml
    main/MoS2/Hsu-2L.yml
    main/MoS2/Hsu-3L.yml
    main/MoSe2/Hsu-1L.yml
    main/MoSe2/Hsu-2L.yml
    main/MoSe2/Hsu-3L.yml
    main/WS2/Hsu-1L.yml
    main/WS2/Hsu-2L.yml
    main/WS2/Hsu-3L.yml
    main/WSe2/Hsu-1L.yml
    main/WSe2/Hsu-2L.yml
    main/WSe2/Hsu-3L.yml
  updated data (thanks to Dmitriy Likhachev, GLOBALFOUNDRIES, Dresden, Germany!)
    main/Mg/Palm.yml
  updated data (thanks to Amir Abdolvand!)
    main/Ar/Grace-solid-20K.yml - dispersion formula
  new data (thanks to Georgy Ermolaev, Moscow Institute of Physics and Technology, Russia, for submitting data in YAML format!)
    main/MoS2/Ermolaev.yml
    main/WS2/Ermolaev.yml
    main/Au/Yakubovsky-4nm.yml
    main/Au/Yakubovsky-6nm.yml
    main/Au/Yakubovsky-9nm.yml
  new data
    main/Au/Rosenblatt-11nm.yml
    main/Au/Rosenblatt-21nm.yml
    main/Au/Rosenblatt-44nm.yml
    main/Be/Svechnikov.yml
  updated data
    main/MoS2/Jung.yml: references
    main/WS2/Jung.yml: references
    main/WSe2/Jung.yml: references
    main/Au/Yakubovsky-25nm.yml: specs
    main/Au/Yakubovsky-53nm.yml: specs
    main/Au/Yakubovsky-117nm.yml: specs
  miscellaneous
    SPECS entry "film_thickness: monolayer" replaced by "film_thickness: 1L" in multiple files
  bug fixes
    main/ZnS/Amotchkina.yml: unused text after comments (Thanks to Phillip Manley, Helmholtz-Zentrum Berlin, Germany)


============================== 2020-01-19 ==============================
  