@@ -1,0 +1,14 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "A. Börzsönyi, Z. Heiner, M. P. Kalashnikov, A. P. Kovács, and K. Osvay, Dispersion measurement of inert gases and gas mixtures at 800 nm, <a href=\"https://doi.org/10.1364/AO.47.004856\"><i>Appl. Opt.</i> <b>47</b>, 4856-4863 (2008)</a>"
+COMMENTS: "Standard conditions. 0 °C, 760 torr (101.325 kPa).<br>Dispersion formula may be usable down to ~0.2 µm."
+DATA:
+  - type: formula 2
+    wavelength_range: 0.4 1.0
+    coefficients: 0 20332.29e-8 206.12e-6 34458.31e-8 8.066e-3
+SPECS:
+    n_absolute: true
+    temperature: 0 °C
+    pressure: 101325 Pa
